<resources>
    <string name="app_name">LEMON CAFE</string>
    <string name="Welcome">WELCOME</string>
    <string name="to">TO</string>
    <string name="lemonCafe">LEMON CAFE </string>
    <string name="signIn">SIGN IN</string>
    <string name="signUp">SIGN UP</string>
    <string name="register_name_hint">Name</string>
    <string name="register_email_hint">Email</string>
    <string name="register_first_name_hint">First Name</string>
    <string name="register_last_name_hint">Last Name</string>
    <string name="register_mobile_number_hint">Mobile Number</string>
    <string name="register_password_hint">Password</string>
    <string name="register_address_hint">Address</string>
    <string name="register_confirm_password_hint">Confirm Password</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="personal_information">PERSONAL INFORMATION</string>
    <string name="previous_orders">PREVIOUS ORDERS</string>
    <string name="member_area">MEMBER AREA</string>
    <string name="feedbacks">FEEDBACKS</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="delete_my_account">DELETE MY ACCOUNT</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="edit">EDIT</string>
    <string name="change_current_password_hint">Current Password</string>
    <string name="change_new_password_hint">New Password</string>
    <string name="change_confirm_password_hint">Confirm Password</string>
    <string name="account_delete_reason">Reason To Delete Account</string>
    <string name="save">SAVE</string>
    <string name="view">View</string>
    <string name="delete">Delete</string>
    <string name="available_coupon">Available Coupon</string>
    <string name="coupon_id">Coupon ID</string>
    <string name="daily_offers">Daily Offers</string>
    <string name="recently_ordered">Recently Ordered</string>
    <string name="why_us">Why Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="facebook">Lemon Cafe</string>
    <string name="insta">Lemon.Cafe</string>
    <string name="number">+94113102102</string>
    <string name="address_1">No.130/A,Highlevel Road,Maharagama.</string>
    <string name="Report">Report</string>
    <string name="what">What is up with your Order?</string>
    <string name="submit_report">Submit Report</string>
    <string name="description">Description</string>
    <string name="successful_message_1">We are sorry for here report from you!</string>
    <string name="successful_message_2">We will contact you as soon as possible</string>
    <string name="background002">background002</string>
    <string name="signUpAvatar">signUpAvatar</string>
    <string name="getStarted">GET STARTED</string>
    <string name="back7">back7</string>
    <string name="logo">logo</string>
    <string name="back8">back8</string>
    <string name="avatar">avatar</string>


</resources>