<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#99EDD9"
    tools:context=".deleteAccount">
    <Button
        android:id="@+id/backBtn"
        android:layout_width="57dp"
        android:layout_height="48dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="348dp"
        android:layout_marginBottom="809dp"
        android:background="@drawable/union_1"
        android:backgroundTint="@color/black"
        android:foreground="@drawable/union_1"
        android:foregroundTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/avatar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.11"
        app:srcCompat="@drawable/group_10" />

    <EditText
        android:id="@+id/reasonToDelete"
        android:layout_width="316dp"
        android:layout_height="74dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="464dp"
        android:ems="10"
        android:hint="@string/account_delete_reason"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView16"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

    <Button
        android:id="@+id/deleteAccountbutton"
        android:layout_width="199dp"
        android:layout_height="82dp"
        android:layout_marginTop="157dp"
        android:text="@string/delete_my_account"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reasonToDelete" />

</androidx.constraintlayout.widget.ConstraintLayout>