<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#66EEC9"
    tools:context=".User_feedbacks">
    <Button
        android:id="@+id/backBtn"
        android:layout_width="57dp"
        android:layout_height="48dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="348dp"
        android:layout_marginBottom="809dp"
        android:background="@drawable/union_1"
        android:backgroundTint="@color/black"
        android:foreground="@drawable/union_1"
        android:foregroundTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="373dp"
        android:layout_height="81dp"
        android:fontFamily="@font/cinzeldecorative_bold"
        android:gravity="center"
        android:text="@string/feedbacks"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.112" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/user_feeedbacks"
        android:layout_width="377dp"
        android:layout_height="79dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="598dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.833">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="231dp"
            android:layout_height="67dp"
            android:text="TextView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.041"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button"
            android:layout_width="52dp"
            android:layout_height="26dp"
            android:backgroundTint="#FFD9C878"
            android:text="@string/edit"
            android:textColor="@color/black"
            android:textSize="5sp"
            tools:layout_editor_absoluteX="251dp"
            tools:layout_editor_absoluteY="16dp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="58dp"
            android:layout_height="27dp"
            android:backgroundTint="#D9C878"
            android:text="@string/delete"
            android:textColor="@color/black"
            android:textSize="5sp"
            tools:layout_editor_absoluteX="317dp"
            tools:layout_editor_absoluteY="15dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>